--- a/CHANGELOG
+++ b/CHANGELOG
@@ -18,3 +18,12 @@
 # 5th release
 * Allowing encrypted zip files
 * Allowing encrypted items.cfg file
+
+# 5.1 release
+* Fix to encrypted.cfg file
+
+# 5.2 release
+* Fix to encrypted.cfg file
+
+# 5.3 release
+* Improving reading speed of encrypted .zip files
