--- a/CHANGELOG
+++ b/CHANGELOG
@@ -33,3 +33,8 @@
 
 # 5.5 release
 * Updated Raknet from 3.25 to 4.082 because zero packets could kill the network thread inside Raknet.
+
+# 6.0 release
+* Downgraded Raknet to 3.25 again due to bandwidth issues.
+* OO'd the Game and servers resulting in 40% higher FPS.
+* Upgraded projects and solutions to Visual Studio 2013
